# firnflow

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.dev  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml  pypi-publish.yml
bench/: demo.cast
bench/results/: beir_multivector_embeddings_manifest.jsonl  beir_multivector_objcache.md  cold_vs_warm.md  cold_vs_warm_aws.md  cold_vs_warm_realistic.md  serialisation.md
bench/results/fiqa_exact_vs_indexed/: fiqa_brute.json  fiqa_indexed.json
crates/firnflow-api/: Cargo.toml
crates/firnflow-api/src/: auth.rs  config.rs  error.rs  handlers.rs  lib.rs  main.rs  rate_limit.rs  state.rs
crates/firnflow-api/tests/: api_auth.rs  api_compact.rs  api_delete.rs  api_fts.rs  api_index.rs  api_list.rs  api_metrics.rs  api_pool.rs  api_query_filter.rs  api_rate_limit.rs  api_scalar_index.rs  api_smoke.rs  api_warmup.rs  config_storage_root.rs
crates/firnflow-api/tests/common/: mod.rs
crates/firnflow-bench/: Cargo.toml
crates/firnflow-bench/src/: main.rs
crates/firnflow-core/: Cargo.toml
crates/firnflow-core/benches/: serialisation.rs
crates/firnflow-core/src/: error.rs  lib.rs  manager.rs  metrics.rs  namespace.rs  query.rs  result.rs  service.rs  storage_root.rs
crates/firnflow-core/src/cache/: invalidation.rs  layer.rs  mod.rs
crates/firnflow-core/tests/: cache_invalidation.rs  cache_restart_staleness.rs  gcs_native_connect.rs  lance_concurrent_writes.rs  manager_connection_pool.rs  manager_idempotent_upsert.rs  manager_import.rs  manager_list.rs  manager_local_fs.rs  manager_multivector.rs  manager_per_namespace_dim.rs  manager_upsert_query.rs  object_cache_s3_smoke.rs  s3_conditional_writes.rs  service_cache_aside.rs  service_query_filter.rs  service_query_smoke.rs  service_result_projection.rs  service_semantic_cache.rs
docs/: CNAME  api.html  architecture.html  configuration.html  deployment.html  index.html  monitoring.html  provider-support.md  quickstart.html
docs/adr/: 001-cache-invalidation.md  002-result-serialisation.md
python/src/: lib.rs
python/tests/: test_firn.py
scripts/: cargo  demo.sh
