[package]
name = "firnflow-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Tiered storage primitives for firnflow: namespace manager, LanceDB wrapper, foyer cache."

[dependencies]
foyer.workspace = true
tokio.workspace = true
serde.workspace = true
dashmap.workspace = true
xxhash-rust.workspace = true
thiserror.workspace = true
tracing.workspace = true
lancedb.workspace = true
lance.workspace = true
arrow-array.workspace = true
arrow-schema.workspace = true
futures.workspace = true
bincode.workspace = true
prometheus.workspace = true
object_store.workspace = true

[dev-dependencies]
tempfile = "3"
aws-config.workspace = true
aws-sdk-s3.workspace = true
# Test-only enablement of object_store's `gcp` backend so the GCS
# native-CAS tests can exercise PutMode::Create against
# storage.googleapis.com. The production feature surface stays at
# `["aws"]` until native GCS support lands as part of a future release.
object_store = { workspace = true, features = ["gcp"] }

[[bench]]
name = "serialisation"
harness = false
